# brookmd

./: .gitignore  README.md  SHIPPING.md  package.json  socket.yml
.github/workflows/: bindings-build.yml  cabi-build.yml  ci.yml  device-validate.yml  fuzz.yml  publish-crate.yml  publish-rn.yml  publish.yml  rn-build.yml  rn-e2e.yml
bindings/kotlin/: .gitignore  README.md
bindings/kotlin/brookmd/: build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/kotlin/brookmd/src/androidTest/kotlin/io/github/siinghd/brookmd/: DeviceWireGoldenTest.kt
bindings/kotlin/brookmd/src/main/: AndroidManifest.xml
bindings/kotlin/brookmd/src/main/jniLibs/x86_64/: .gitkeep
bindings/kotlin/brookmd/src/main/kotlin/io/github/siinghd/brookmd/: brook_md_ffi.kt
bindings/kotlin/fluxmd/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/fluxmd/src/main/jniLibs/armeabi-v7a/: .gitkeep
bindings/kotlin/fluxmd/src/main/kotlin/io/github/siinghd/fluxmd/: flux_md_ffi.kt
bindings/kotlin/host-test/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/host-test/src/test/kotlin/io/github/siinghd/brookmd/: WireGoldenTest.kt
bindings/kotlin/host-test/src/test/kotlin/io/github/siinghd/fluxmd/: WireGoldenTest.kt
bindings/kotlin/scripts/: generate.sh
bindings/swift/: .gitignore  Package.swift  README.md
bindings/swift/Frameworks/: .gitkeep
bindings/swift/Sources/BrookMd/: brook_md_ffi.swift
bindings/swift/Sources/FluxMd/: flux_md_ffi.swift
bindings/swift/Tests/BrookMdTests/: WireGoldenTests.swift
bindings/swift/Tests/FluxMdTests/: WireGoldenTests.swift
bindings/swift/scripts/: build-xcframework.sh  generate.sh
crates/brookmd-cabi/: Cargo.toml
crates/brookmd-cabi/include/: brook_md.h
crates/brookmd-cabi/src/: lib.rs
crates/brookmd-cabi/tests/: symbol_drift.rs  wire_golden.rs
crates/brookmd-core/: Cargo.toml  README.md  WIRE.md
crates/brookmd-core/examples/: bench.rs  bench_table_data.rs  prof.rs
crates/brookmd-core/fuzz/: Cargo.toml
crates/brookmd-core/fuzz/corpus/parity/: blockquote_inner.md  edges.md  mixed.md  nested_loose_list.md  refs_and_footnotes.md
crates/brookmd-core/fuzz/fuzz_targets/: parity.rs
crates/brookmd-core/src/: blocks.rs  inline.rs  lib.rs  parser.rs  render.rs  scanner.rs  wire.rs
crates/brookmd-core/tests/: a11y.rs  block_kind_serde_golden.rs  cmark_spec.rs  code_fence_cache.rs  codeblock_block_data.rs  component_tags.rs  container_block_data.rs  container_cache.rs  dir_auto.rs  finalize_parity.rs  footnote_cache.rs  footnotes.rs  fuzz.rs  fuzz_partial_code.rs  fuzz_partial_link.rs  fuzz_streaming.rs  gfm-spec.json  gfm_spec.rs  gfm_tagfilter.rs  heading_block_data.rs  html_sanitize.rs  inline_component_tags.rs  list_block_data.rs  list_cache.rs  math.rs  math_fence_cache.rs  mathblock_block_data.rs  midstream_parity.rs  open_block_cache_parity.rs  paragraph_streaming.rs  parity_prop.rs  ref_defs_streaming.rs  regressions.rs  scaling.rs  security.rs  speculative_label.rs  table_block_data.rs  table_cache.rs  table_streaming.rs  unclosed_block_cache.rs  (+2 more)
crates/brookmd-ffi/: Cargo.toml  uniffi.toml
crates/brookmd-ffi/src/: lib.rs
crates/brookmd-ffi/tests/: wire_golden.rs
crates/flux-md-cabi/: Cargo.toml
crates/flux-md-cabi/include/: flux_md.h
crates/flux-md-cabi/src/: lib.rs
crates/flux-md-cabi/tests/: symbol_drift.rs  wire_golden.rs
crates/flux-md-core/: Cargo.toml  README.md  WIRE.md
crates/flux-md-core/examples/: bench.rs  bench_table_data.rs
crates/flux-md-core/fuzz/: Cargo.toml
crates/flux-md-core/fuzz/corpus/parity/: alert_with_blocks.md
crates/flux-md-core/fuzz/fuzz_targets/: parity.rs
crates/flux-md-core/src/: blocks.rs  entities.rs  inline.rs  lib.rs  parser.rs  render.rs  scanner.rs  url.rs  wire.rs
crates/flux-md-core/tests/: block_kind_serde_golden.rs  cmark_spec.rs  code_fence_cache.rs  codeblock_block_data.rs  container_block_data.rs  container_cache.rs  footnote_cache.rs  footnotes.rs  fuzz.rs  fuzz_partial_link.rs  fuzz_streaming.rs  gfm_spec.rs  gfm_tagfilter.rs  list_cache.rs  math.rs  mathblock_block_data.rs  midstream_parity.rs  open_block_cache_parity.rs  paragraph_streaming.rs  parity_prop.rs  ref_defs_streaming.rs  regressions.rs  scaling.rs  security.rs  speculative_label.rs  streamdown_issues.rs  table_block_data.rs  table_cache.rs  wire_envelope_golden.rs
crates/flux-md-ffi/: Cargo.toml  uniffi.toml
crates/flux-md-ffi/src/: lib.rs
crates/flux-md-ffi/tests/: wire_golden.rs
examples/rn-e2e/: .gitignore  App.tsx  app.json  globals.d.ts  golden.ts  metro.config.js  package.json  tsconfig.json
examples/rn-e2e/android/: settings.gradle
examples/rn-e2e/android/app/: build.gradle
examples/rn-e2e/android/app/src/main/java/com/brooke2e/: MainActivity.kt  MainApplication.kt
examples/rn-e2e/android/app/src/main/res/values/: strings.xml
examples/rn-e2e/android/app/src/main/res/xml/: network_security_config.xml
examples/rn-e2e/ios/: Podfile
examples/rn-e2e/ios/BrookE2e/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
examples/rn-e2e/ios/BrookE2e.xcodeproj/: project.pbxproj
examples/rn-e2e/ios/BrookE2e.xcodeproj/xcshareddata/xcschemes/: BrookE2e.xcscheme
examples/rn-e2e/scripts/: android-emulator-run.sh
web/: data-studio.smoke.mjs  index.html  package.json  smoke-compare.mjs  smoke-memory.mjs  smoke-mempanel.mjs  smoke.mjs  tsconfig.json  vite.brook.config.ts  vite.config.ts
web/src/: App.tsx  brook-entry.ts  main.tsx  styles.css
web/src/components/: Chat.tsx  ComponentsDemo.tsx  DataStudio.tsx  MainThreadHealth.ts  MemoryPanel.tsx  MemoryTest.ts  MetricsHud.tsx  StreamLab.tsx  StreamdownPanel.tsx
web/src/streaming/: demoDoc.ts  openai.ts
